fix(NotificationCenter): Fixed wrong loader-alignment

--- a/src/style/notificationCenter.less
+++ b/src/style/notificationCenter.less
@@ -35,6 +35,7 @@
 
     &.loading {
       text-align: center;
+      justify-content: center;
       padding: 10px;
 
       .fa-spin {
